# android-auto-headunit

./: CLAUDE.md  build.gradle  settings.gradle
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
app/: build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aap_message.cpp  aap_message.h  channel_dispatcher.cpp  channel_dispatcher.h  jni_bridge.cpp  ring_buffer.cpp  ring_buffer.h  usb_connection.cpp  usb_connection.h
app/src/main/proto/: control.proto  input.proto  media.proto  sensors.proto
app/src/main/res/drawable/: button_primary.xml  dot_indicator.xml  ic_audio.xml  ic_back.xml  ic_chevron_right.xml  ic_exit.xml  ic_gps.xml  ic_graphics.xml  ic_input.xml  ic_location_large.xml  ic_mic_large.xml  ic_other.xml  ic_phone_large.xml  ic_settings.xml  ic_usb.xml
app/src/main/res/drawable-v21/: tile_background.xml
app/src/main/res/values/: arrays.xml  (+4 more)
docs/plans/: 2025-01-29-libusb-integration-design.md  2025-12-22-projection-scaling-design.md  2025-12-22-projection-scaling-implementation.md  2025-12-22-ui-redesign-design.md  2025-12-22-ui-redesign-implementation.md  2025-12-22-usb-device-list-design.md  2025-12-22-usb-device-list-implementation.md  2025-12-22-video-decoder-performance-design.md  2025-12-29-message-dispatcher-design.md
gradle/wrapper/: gradle-wrapper.properties
(+72 files in other folders)
